external_kafka_server.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafkaserver 
spec:
  type: ExternalName
  externalName: ec2-13-235-208-8.ap-south-1.compute.amazonaws.com
