external_zeebe_server.yaml
kind: Service
apiVersion: v1
metadata:
  name: zeebeserver 
spec:
  type: ExternalName
  externalName: ec2-35-154-32-143.ap-south-1.compute.amazonaws.com
