ifrm_uam.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: ifrm-user-access-management-api
spec:
  selector:
    matchLabels:
      app: ifrm-user-access-management-api
  replicas: 3

  template:
    metadata:
      labels:
        app: ifrm-user-access-management-api
    spec:
      containers:
        - name: ifrm-user-access-management-api
          image: "atulkhot/uam-e"
          ports:
            - name: management
              containerPort: 8558
          readinessProbe:
            httpGet:
              path: "/ready"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: "/alive"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ifrm-user-access-management-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9000
  selector:
    app: ifrm-user-access-management-api
  type: LoadBalancer
