ifrm_uds.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: ifrm-uds-api
spec:
  selector:
    matchLabels:
      app: ifrm-uds-api
  replicas: 3

  template:
    metadata:
      labels:
        app: ifrm-uds-api
    spec:
      containers:
        - name: ifrm-uds-api
          image: "atulkhot/uds-f"
          ports:
            - name: management
              containerPort: 8558
          readinessProbe:
            httpGet:
              path: "/ready"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: "/alive"
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 0.25
              memory: 512Mi


---
apiVersion: v1
kind: Service
metadata:
  name: ifrm-uds-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9000
  selector:
    app: ifrm-uds-api
  type: LoadBalancer
